--- a/src/puzzleImage/styles.css
+++ b/src/puzzleImage/styles.css
@@ -25,15 +25,15 @@ body {
 
 #game-board {
     display: grid;
-    grid-template-columns: repeat(5, 80px);
-    grid-template-rows: repeat(5, 80px);
+    grid-template-columns: repeat(5, 120px);
+    grid-template-rows: repeat(5, 120px);
     gap: 1px;
     margin: 20px auto;
     width: max-content;
 }
 
 .tile {
-    background-size: 400px 400px;
+    background-size: 600px 600px;
     background-position: center;
     cursor: pointer;
     display: flex;
@@ -57,8 +57,17 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-
+/* 
 @media screen and (max-width: 992px) {
+    .tile {
+        background-size: 500px 500px;
+        background-position: center;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     #game-board {
         display: grid;
         grid-template-columns: repeat(5, 100px);
@@ -67,7 +76,7 @@ body {
         margin: 10px auto;
         width: max-content;
     }
-}
+} */
 
 @media screen and (max-width: 767px) {
 
@@ -96,8 +105,9 @@ body {
 
 
     .tile {
+        background-size: 325px 325px;
         background-position: center;
-        cursor: grab;
+        cursor: pointer;
         /* border: 0.5px solid #000; */
         display: flex;
         align-items: center;
